[package]
name = "warpsite"
version = "0.1.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
ignore = "0.4.17"
log = "0.4.14"
pulldown-cmark = "0.8.0"
walkdir = "2.3.1"
